--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -44,7 +44,7 @@ sites:
     url: https://www.tumblr.com/9renpoto
 
 status-website:
-  baseUrl: /
+  baseUrl: /upptime
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: Upptime
   introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
